# Cognitive-AI

./: .env.example  .gitignore  README.md  package-lock.json  package.json
backend/: pyproject.toml
backend/app/: __init__.py  config.py  llm_client.py  migrations.py  models.py
backend/app/agents/: base.py  definitions.py  registry.py
backend/app/agents/tools/: course_tools.py
backend/app/api/: __init__.py  activities.py  agents.py  assignments.py  courses.py  graph.py  jobs.py  materials.py  progress.py  review.py  tutor.py  users.py
backend/app/rag/: chunker.py  embedding.py  extractor.py  vector_store.py
backend/app/services/: activity_service.py  assignment_service.py  course_service.py  job_handlers.py  job_queue.py  material_service.py  progress_service.py  review_service.py  seed_data.py  tutor_service.py  user_service.py
backend/app/tests/: conftest.py  test_activities_api.py  test_agents.py  test_api_extended.py  test_courses_api.py  test_graph_api.py  test_materials_api.py  test_rag_modules.py  test_review_publish.py  test_seed_data.py  test_tutor_service.py  test_user_assignment_progress.py
docs/superpowers/plans/: 2026-05-01-cognitive-ai-learning-platform-mvp.md  2026-05-01-cognitive-ai-platform-phase1.md  2026-05-02-course-module-spatial-implementation.md  2026-05-03-chapter-activity-flow-implementation.md  2026-05-04-rag-llm-agent-implementation.md  2026-05-05-backend-framework-phase2-complete.md
frontend/: index.html  package-lock.json  package.json  update_course.js  vite.config.js
frontend/src/: App.vue  main.js
(+55 files in other folders)
