[project]
name = "cognitive-ai-learning-platform-backend"
version = "0.2.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "flask>=3.0.0",
  "flask-cors>=6.0.0",
  "flask-sqlalchemy>=3.1.1",
  "python-dotenv>=1.0.0",
  "openai>=1.0.0",
  "pypdf>=4.0.0",
  "chromadb>=0.4.0",
  "httpx>=0.27.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
